--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ test:
     - {{ modulename }}
   requires:
     - pytest
+    - spacy >=3.0.0,<3.1.0
   commands:
     - python -m pytest --tb=native --pyargs {{ modulename }}
 
