--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,8 @@ test:
     - {{ modulename }}
   requires:
     - pytest
-    - spacy >=3.0.0,<3.1.0
+    - wandb
+    - spacy >=3.1.0,<3.3.0
   commands:
     - python -m pytest --tb=native --pyargs {{ modulename }}
 
